# ChangeLog for dev-util/subversion
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/subversion/Attic/ChangeLog,v 1.170 2005/08/27 20:21:20 pauldv Exp $

*subversion-1.2.3-r1 (27 Aug 2005)
*subversion-1.2.3 (27 Aug 2005)

  27 Aug 2005; Paul de Vrieze <pauldv@gentoo.org> +subversion-1.2.3.ebuild,
  +subversion-1.2.3-r1.ebuild:
  New upstream versions. The one that works with unstable apache is -r1. The 
  1.2.3 version (masked because still untested) should work with the stable 
  apache versions. As stable and unstable apache are incompatible the two 
  ebuilds are released simultaneously.

  25 Aug 2005; <pauldv@gentoo.org> files/svnserve.initd:
  Fix the init script to change its working directory to the root to 
  prevent unmounting and hook script problems. See bug #97926

  25 Aug 2005; <pauldv@gentoo.org> subversion-1.1.3.ebuild,
  subversion-1.2.1.ebuild:
  Fix the pkg_postinst message to suggest a more secure setup for ssh+svn 
  such that user permissions are not overly free and membership of the 
  apache group is not needed. (bug #94718)

  25 Aug 2005; <pauldv@gentoo.org> files/svnserve.xinetd,
  subversion-1.2.1.ebuild:
  Fix the svnserve xinet.d script (see bug #82262)

  25 Aug 2005; <pauldv@gentoo.org> subversion-1.2.1.ebuild:
  Make the subversion book be installed again. Thanks to Axel 
  Dyks<XL@XLsigned.net> in bug #103576.

  29 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> subversion-1.1.3.ebuild,
  subversion-1.2.1.ebuild:
  Added ~mips.

*subversion-1.2.1 (08 Jul 2005)

  08 Jul 2005; Paul de Vrieze <pauldv@gentoo.org> +subversion-1.2.1.ebuild:
  New upstream version

  23 Jun 2005; Sven Wegener <swegener@gentoo.org> subversion-1.2.0.ebuild:
  Correctly check for the perl USE flag before calling perl-module_pkg_postrm.

  23 Jun 2005; Fernando J. Pereda <ferdy@gentoo.org>
  subversion-1.1.3.ebuild:
  stable on alpha
