@@ -1,12 +1,12 @@
 MD5 c60d28f0f833c15ac51412e104163f4b subversion-1.1.1-r3.ebuild 10930
-MD5 3a993880c4ac1c37f20524c5d4824315 ChangeLog 29746
+MD5 cd1d7b83c760f245329f206956f80697 ChangeLog 29941
 MD5 06d037b094b22ff7e7111ddf0171aa36 subversion-1.0.9.ebuild 9497
 MD5 76bbb2ff27f3d246e88e5bb81d35c82b subversion-1.1.4.ebuild 10287
-MD5 33e3683d39abe01638d8cb58052ce59e subversion-1.2.3-r1.ebuild 10754
+MD5 8c688f991aacd9613ee2177dafa82d71 subversion-1.2.3-r1.ebuild 10854
 MD5 d4ce7ce93bd43506cec558ec1e3e361c subversion-1.1.3.ebuild 11414
 MD5 95ec7f00d624ef03a2243693afecbda4 subversion-1.1.3-r1.ebuild 10162
 MD5 8fbcd267012fd1eef74d5161888cc7b8 metadata.xml 222
-MD5 a539bd180da1e8f57760702980c41c31 subversion-1.2.3.ebuild 11654
+MD5 2cb04b59ecc7613ea4304f2efa280c66 subversion-1.2.3.ebuild 11784
 MD5 dc21f7cf5911e8838bada6ea19c934f1 subversion-1.1.4-r1.ebuild 10380
 MD5 4884915b3f085149db98b98242155e36 subversion-1.2.0.ebuild 10478
 MD5 6cf68c816a49ee846823009ecea40e24 subversion-1.2.1.ebuild 10751
